--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
                 </nav>
             </header>
             <!--Slider-->
-            <div id="slider">
+            <!---<div id="slider">
                 <div class="bxslider">
                     <div><img src="img/hojas.jpg" title="Hoja"></div>
                     <div><img src="img/rojo.jpg" title="Rojo"></div>
                     <div><img src="img/cielo.jpg" title="Happy trees"></div>
                 </div>
+            ----------->
 
             </div>
             <!--Contenido-->
